force-app/main/default/objects/BMCServiceDesk__QueueTimeTracking__c/BMCServiceDesk__QueueTimeTracking__c.object-meta.xml
<CustomObject>
    <description>This object is used to track the queue assignment of the record</description>
    <label>Queue Time Tracking</label>
    <nameField>
        <label>Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queue Time Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>