force-app/main/default/objects/BMCServiceDesk__QueueTimeTracking__c/fields/BMCServiceDesk__Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Assigned_Date__c</fullName>
    <label>Assigned Date</label>
    <type>DateTime</type>
</CustomField>