force-app/main/default/objects/BMCServiceDesk__QueueTimeTracking__c/fields/BMCServiceDesk__FKIncident__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKIncident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
    <relationshipLabel>Queue Time Trackings (Incident)</relationshipLabel>
    <relationshipName>Queue_Time_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>