force-app/main/default/objects/BMCServiceDesk__QueueTimeTracking__c/fields/BMCServiceDesk__Non_Work_Duration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Non_Work_Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Wait Time (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>