force-app/main/default/objects/BMCServiceDesk__QueueTimeTracking__c/fields/BMCServiceDesk__Total_time__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Total_time__c</fullName>
    <formula>BMCServiceDesk__Work_Duration__c  +  BMCServiceDesk__Non_Work_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>