force-app/main/default/objects/BMCServiceDesk__QueueTimeTracking__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__FKIncident__c</columns>
    <columns>BMCServiceDesk__Assigned_Date__c</columns>
    <columns>BMCServiceDesk__Unassigned_Date__c</columns>
    <columns>BMCServiceDesk__Work_Duration__c</columns>
    <columns>BMCServiceDesk__Non_Work_Duration__c</columns>
    <columns>BMCServiceDesk__Total_time__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>